--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,9 +16,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>INSTAGRAM-CLONE</title>
   </head>
-  <body>
+  <body style="background-color: rgb(250,250,250);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
